beginning to port to es6

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 			padding: 0;
 			font-size: 12pt;
 		}
-		
 		#canvas {
 			position: absolute;
 			left: 0;
@@ -22,10 +21,11 @@
 		}
 	</style>
 
-	<script type="text/javascript" src="lib/impact/impact.js"></script>
-	<script type="text/javascript" src="lib/game/main.js"></script>
+	<!-- <script type="text/javascript" src="lib/impact/impact.js"></script> -->
+	<!-- <script type="text/javascript" src="lib/game/main.js"></script> -->
 </head>
 <body>
 	<canvas id="canvas"></canvas>
+	<script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
