--- a/weltmeister/index.html
+++ b/weltmeister/index.html
@@ -3,11 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>Weltmeister</title>
-	<link rel="stylesheet" type="text/css" href="lib/weltmeister/weltmeister.css"/>
-	<script src="lib/weltmeister/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="lib/weltmeister/jquery-ui-1.8.1.custom.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="lib/impact/impact.js" type="text/javascript" charset="utf-8"></script>
-	<script src="lib/weltmeister/weltmeister.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" type="text/css" href="/weltmeister.css"/>
+	<script src="/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/jquery-ui-1.8.1.custom.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 <div id="headerMenu">
@@ -94,5 +92,9 @@
 	<div id="zoomIndicator">1x</div>
 	
 </div>
+
+<!-- <script src="lib/impact/impact.js" type="text/javascript" charset="utf-8"></script>
+	<script src="lib/weltmeister/weltmeister.js" type="text/javascript" charset="utf-8"></script> -->
+	<script src="/wm/dist/bundle.js" type="text/javascript" charset="utf-8"></script> -->
 </body>
 </html>
