glob endpoint, WIP

--- a/game/index.html
+++ b/game/index.html
@@ -24,6 +24,6 @@
 </head>
 <body>
 	<canvas id="canvas"></canvas>
-	<script type="text/javascript" src="dist/bundle.js"></script>
+	<script type="text/javascript" src="dist/gamebundle.js"></script>
 </body>
 </html>
